name:                day03
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rleppink/day03#readme
license:             BSD3
license-file:        LICENSE
author:              Ronald Leppink
maintainer:          ronaldleppink@gmail.com
copyright:           Copyright (c) 2017 Ronald Leppink
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day03
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , matrix
